# CV_ITMO_2023

./: .gitignore  README.md  data_explore.ipynb  mask_9728_4608.tif  pyproject.toml  torchgeo_train.ipynb  train_torchgeo.py  visual_checking.ipynb
.github/workflows/: flake8.yml  pylint.yml
MLOps_course/: README.md  ТЗ_Борщевик_детектор_v.1.01.docx
MLOps_course/DVC+S3/: README.md
MLOps_course/MLFlow/: README.md
data/: Kashin region.geojson  README.md  dataload.py  dataprep.py  load_from_satellite.py  processing_after_label.py  processing_before_label.py  torchgeo_split_ds.py  upload_data_to_clearml.py
data/interim/: annotations.xml
data/interim/classic/: README.md
data/processed/classic/: README.md
data/processed/torchgeo/: README.md
data/raw/: README.md
mlops/: README.md
models/: README.md
models/inference/example_imgs/: test.tif  test1.tif  test2.tif  test3.tif  test4.tif  test5.tif
notebooks/: torchgeo_train.ipynb  visual_checking.ipynb
references/: how_to_create_own_dataset.md
references/helpers/: itmo_cv.drawio
reports/: README.md
src/app/: app.py  ing.html
src/data/: processing_after_label.py  processing_before_label.py  split_datasets.py  upload_data_to_clearml.py
src/models/: lion_pytorch.py  onnx_converter.py  predict_torchgeo.py  train_torch.py  train_torchgeo.py
