[tool.poetry]
name = "cv-itmo"
version = "0.1.0"
description = "best map service"
authors = ["Kirill <gipokrat089@gmail.com>"]
readme = "README.md"
packages = [{include = "cv_itmo"}]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^1.0.0"
sentinelsat = "^1.1.1"
rasterio = "^1.3.6"
matplotlib = "^3.7.0"
scikit-image = "^0.19.3"
opencv-python = "^4.7.0.72"
isort = "^5.12.0"
black = "^23.1.0"
torchgeo = "^0.4.0"
clearml = "^1.9.3"
segmentation-models-pytorch = "0.2.0"
torch = {version = "1.13.1", source="torch"}
torchvision = {version = "0.14.1", source="torch"}
tensorboard = "^2.12.0"
fastapi = "^0.95.0"
fastapi-responses = "^0.2.1"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu117"
secondary = true


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
